--- a/static/assets/css/settings/main2.css
+++ b/static/assets/css/settings/main2.css
@@ -7,21 +7,21 @@ body {
 }
 .row {
   margin-right: auto;
-  margin-left: auto;
-  display: grid;
-  grid-template-columns: auto auto auto;
-  grid-template-rows: auto auto;
   grid-gap: 2rem;
   position: absolute;
-  top: 120px;
+  top: 105px;
   left: 2%;
   right: 2%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
 }
 .card {
   transition: 0.3s;
-  border-radius: 5px; 
-  width: 450px;
-  height: 225px;
+  border-radius: 5px;
+  width: 30%;
+  height: 250px;
   color: white;
   background-color: rgba(34, 34, 34, 0.5);
   max-height: 100%;
@@ -52,7 +52,7 @@ p {
 }
 
 h1 {
-  top:50px;
+  top: 50px;
   text-align: center;
 }
 .tab-cloak {
@@ -122,7 +122,7 @@ img {
   border-color: white;
   color: white;
   height: 50px;
-  width: 200px
+  width: 200px;
 }
 
 .t:hover {
